[package]
name = "sharkmon"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
tower-http = { version = "*", features=["fs"] }
tokio-modbus = "0.5"
serde = { version = "*", features = ["derive"] }
serde_json = "*"
axum = "*"
structopt = "*"
log = "*"
env_logger = "*"

[profile.release]
lto = true