[package]
name = "sharkmon"
version = "0.3.0"
description = "Small rust utility to retrieve and serve Electro Industries Shark 100S power data"
authors = ["David Andersen <dave.andersen@gmail.com>"]
license = "Apache-2.0"
readme = "README.md"
keywords = ["shark", "modbus", "power"]
homepage = "https://github.com/dave-andersen/sharkmon-rs"
repository = "https://github.com/dave-andersen/sharkmon-rs"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
tower-http = { version = "*", features=["fs"] }
tokio-modbus = "0.5"
serde = { version = "*", features = ["derive"] }
serde_json = "*"
axum = "*"
clap = {version = "*", features = ["derive"] }
log = "*"
env_logger = "*"

[profile.release]
lto = true

[build-dependencies]
clap_mangen = "0.1"
clap = {version = "*", features = ["derive"]}
