[package]
name = "sharkmon"
version = "0.3.1"
description = "Small rust utility to retrieve and serve Electro Industries Shark 100S power data"
authors = ["David Andersen <dave.andersen@gmail.com>"]
license = "Apache-2.0"
readme = "README.md"
keywords = ["shark", "modbus", "power"]
homepage = "https://github.com/dave-andersen/sharkmon-rs"
repository = "https://github.com/dave-andersen/sharkmon-rs"
categories = ["command-line-utilities"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
tower-http = { version = "*", features=["fs"] }
tower = "*"
tokio-modbus = { version = "0.7", default-features = false, features = ["tcp-sync"] }
serde = { version = "*", features = ["derive"] }
serde_json = "*"
axum = "0.6"
clap = {version = "4", features = ["derive"] }
log = "*"
env_logger = "*"

[profile.release]
lto = true

[build-dependencies]
clap_mangen = "0.2.2"
clap = {version = "4", features = ["derive"]}
